--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -1,5 +1,5 @@
 <style type="text/css">.no-fouc {display: none;}</style>
-<script>$("#tnthNavWrapper").addClass('no-fouc');</script>
+<script>$("#tnthNavWrapper, .watermark").addClass('no-fouc');</script>
 <link rel="stylesheet" href="{{PORTAL}}{{ url_for('static', filename='css/topnav.css') }}">
 <script src="{{PORTAL}}{{ url_for('static', filename='js/tnth.js') }}"></script>
 <script>
@@ -58,6 +58,7 @@
 {% if not enable_links %}
 <style>#tnthNavXs .tnth-nav-btn{ display: none; }</style>
 {% endif %}
+{% if config.SYSTEM_TYPE and config.SYSTEM_TYPE != "Production" %}<div class='watermark'>TRUE<sup>NTH</sup> - {{config.SYSTEM_TYPE}} version - Not for study or clinical use</div>{% endif %}
 <div id="tnthNavWrapper">
     <div id="tnthNavMain">
         <div id="tnthNavMainContainer">
@@ -161,12 +162,8 @@ $(document).ready(function(){
               .on("click", "#log-out", sessMon.logout)
               .find("#remaining-time").text(sessMon.timeBeforeWarning / 1000);
    {% endif %}
-   (function() {
-    var __env = {% if config.SYSTEM_TYPE %}"{{config.SYSTEM_TYPE}}"{% else %}""{% endif %};
-    if ((__env != "" && __env.toLowerCase() != "production") && ($(".watermark").length == 0)) $("<div class='watermark'>TRUE<sup>NTH</sup> - " + __env + " version - Not for study or clinical use</div>").appendTo("body");
-   }) ();
 });
 </script>
 <script defer>setTimeout("$('.no-fouc').removeClass('no-fouc');", 300);</script>
 
-	
+
