--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1318,7 +1318,8 @@ div.noOrg-container {
   border-bottom: 1px solid #E0E6E3;
   padding: 0.1em 0 1.5em 0;
   h4 {
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
   }
   button, a {
     padding: 0.5em;
@@ -1420,10 +1421,18 @@ div.noOrg-container {
 .radio-inline input[type=radio] {
   margin-left: -18px;
 }
-
+.radio-inline span {
+  margin-left: 4px;
+}
 div.modal-header, div.modal-footer {
   background-color: @btnColor;
   color: #FFF;
+}
+div.modal-body {
+  padding: 0.8em 2em;
+}
+div.modal-footer .btn {
+  font-size: 0.9em;
 }
 
 .hide {
