default check org if only one present in create profile page

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -914,6 +914,7 @@ div.noOrg-container span {
 #createProfileForm #noEmail {
   position: relative;
   top: -1px;
+  left: 1px;
 }
 #emailInfoText {
   display: none;
