--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -117,6 +117,9 @@ a.btn {
   cursor: pointer;
   border: none
 }
+.btn a {
+  text-decoration: none;
+}
 .btn-tnth-back {
   color: #777;
   padding: 0;
@@ -557,14 +560,21 @@ div.right-panel {
 }
 
 #dataDownloadModal {
+  .modal-dialog {
+    max-width: 500px;
+  }
+  .modal-header {
+    font-size: 1.1em;
+    padding: 1.1em;
+  }
   .modal-body {
-    padding: 1em
+    padding: 2em
   }
   button {
     font-size:0.8em;
   }
   .profile-radio-list {
-    margin-left:1em
+    margin-left:1.5em
   }
   div.checkbox label{
     font-size: 0.8em;
@@ -577,6 +587,31 @@ div.right-panel {
     top: -1px;
     left: -1px;
   }
+}
+#patientsInstrumentListWrapper {
+  position: relative;
+  padding: 0.6em 0 0.3em 0;
+}
+#patientsInstrumentList {
+  opacity: 0;
+  transition: opacity 250ms ease-in;
+  &.ready {
+    opacity: 1;
+    & + #instrumentListLoad {
+      opacity: 0;
+    }
+  }
+}
+#instrumentListLoad {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 1.5em;
+  opacity: 1;
+  transition: opacity 250ms ease-out;
+}
+#patientsDownloadTypeList {
+  margin-top: 0.5em;
 }
 
 #_downloadMessage {
@@ -1052,38 +1087,20 @@ div.noOrg-container {
   margin-left: -1%;
 }
 
-#userSessionReportDetailHeader {
-  span.glyphicon {
-    background: #fff;
-    background-image: -webkit-linear-gradient(top, #fff, #eee);
-    background-image: -moz-linear-gradient(top, #fff, #eee);
-    background-image: -ms-linear-gradient(top, #fff, #eee);
-    background-image: -o-linear-gradient(top, #fff, #eee);
-    background-image: linear-gradient(to bottom, #fff, #eee);
-    -webkit-box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.4);
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 0.39em;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-    filter: alpha(opacity=80);
-    -moz-opacity: 0.8;
-    -khtml-opacity: 0.8;
-    opacity: 0.8;
-    background-color: #FFF;
-  }
-  span.glyphicon-user {
-    padding: 0.42em 0.43em 0.42em 0.43em;
-    margin-top: -2.5px;
-  }
-  span.glyphicon:hover {
-    color: @linkHover;
-  }
-  span.glyphicon-home {
-    top: 5px;
-  }
+#userSessionReportDetailHeader a[href] {
+  background-image: -webkit-linear-gradient(top, #fff, #eee);
+  background-image: -moz-linear-gradient(top, #fff, #eee);
+  background-image: -ms-linear-gradient(top, #fff, #eee);
+  background-image: -o-linear-gradient(top, #fff, #eee);
+  background-image: linear-gradient(to bottom, #fff, #eee);
+  -webkit-box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.4);
+  border-left: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  color: #606a73;
+  padding: 0.4em;
+  margin-top: 0.5em;
 }
 
 #userSessionReportDetailTable caption {
@@ -1788,15 +1805,6 @@ div.timezone-warning.text-warning {
         width: 100%;
         max-width: 100%;
       }
-  }
-
-  #userSessionReportDetailHeader {
-    span.glyphicon-user {
-      margin-top: 2px;
-    }
-    span.glyphicon-home {
-      top: 5.7px;
-    }
   }
 
   button.btn-delete-consent {
