--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -983,11 +983,12 @@
                         reportHTML += '<tr><TH>Question</TH><TH>Response</TH></tr>';
                         entry['group']['question'].forEach(function(entry) {
                             var q = entry['text'] ? entry['text'] : '';
-                            var sq = "";
-                            sq = q.replace(/^[\d\w]{1,3}\./, "");  //replace question # in the beginning of the question
-
+                            if (hasValue(q)) q = q.replace(/^[\d\w]{1,3}\./, "");  //replace question # in the beginning of the question
+                            else {
+                                if (entry['answer'] && entry['answer'][1] && entry['answer'][1]['valueCoding']) q = entry['answer'][1]['valueCoding']['code'];
+                            };
                             var a = entry['answer'] && entry['answer'][0] && entry['answer'][0]['valueString'] ? entry['answer'][0]['valueString'] : 'undefined';
-                            reportHTML += '<tr><td>' + sq + '</td><td>' + (String(a) !== 'undefined' ? a : '--') + '</td></tr>';
+                            reportHTML += '<tr><td>' + (hasValue(q)? q: "--") + '</td><td>' + (String(a) !== 'undefined' ? a : '--') + '</td></tr>';
                         });
                         $("#userSessionReportDetailTable").append(reportHTML);
 
