--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -10,25 +10,15 @@
 	<h4 class="text-muted">{{ _("Patient") }} #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
 	</span>
 	<span class="right">
-		<a href="{%if current_user.has_role(ROLE.STAFF)%}{{url_for('patients.patient_profile', patient_id=user.id) }}{%else%}{{url_for('portal.profile', user_id=user.id)}}{%endif%}" class="btn btn-xs btn-tnth-back" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Patient Profile') }}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a><a href="{{PORTAL}}/home" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Truenth Home') }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+		<a href="{%if current_user.has_role(ROLE.STAFF)%}{{url_for('patients.patient_profile', patient_id=user.id) }}{%else%}{{url_for('portal.profile', user_id=user.id)}}{%endif%}" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Patient Profile') }}" class="btn"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>&nbsp;&nbsp;<a href="{{PORTAL}}/home" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Truenth Home') }}" class="btn"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
 	</span>
-	
+
 </div>
 <div class="report-error-message">{{ _("Unable to load report") }}</div>
 <div class="container">
 	<div class="row" style="position: relative;">
 	    <div class="col-md-12">
-	    	
 	       	{{profileAssessment(user, instrument_id, authored_date)}}
-	 
-	        <br />
-	        <!--
-	        <a href="{{ url_for('patients.patient_profile', patient_id=user.id) }}" class="btn btn-xs btn-tnth-back"><small><i class="fa fa-chevron-left"></i> Back to Profile</small></a>
-	        <br/>
-	        -->
-	        <!--
-	        <a href="{{PORTAL}}/home" class="btn btn-xs btn-tnth-back"><small><i class="fa fa-chevron-left"></i> Back to Home</small></a>
-	        -->
 	    </div>
 	</div>
 </div>
