download modal css fix

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -568,7 +568,7 @@ div.right-panel {
     padding: 1.1em;
   }
   .modal-body {
-    padding: 2em
+    padding: 2em 2em 1em 2em;
   }
   button {
     font-size:0.8em;
