--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -557,7 +557,7 @@ h4.detail-title {
     padding: 1.1em;
   }
   .modal-body {
-    padding: 2em
+    padding: 2em 2em 1em 2em;
   }
   button {
     font-size:0.8em;
