--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -506,7 +506,7 @@ div.right-panel {
   padding: 1.1em;
 }
 #dataDownloadModal .modal-body {
-  padding: 2em;
+  padding: 2em 2em 1em 2em;
 }
 #dataDownloadModal button {
   font-size: 0.8em;
