--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -493,7 +493,7 @@ h4.detail-title {
   padding: 1.1em;
 }
 #dataDownloadModal .modal-body {
-  padding: 2em;
+  padding: 2em 2em 1em 2em;
 }
 #dataDownloadModal button {
   font-size: 0.8em;
