patients list table and assessment report css fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -313,6 +313,7 @@ div.right-panel {
 }
 #adminTable tr[data-uniqueid]:hover {
   background-color: #ececea;
+  color: #606a73;
 }
 .save-info {
   opacity: 0;
