--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -322,6 +322,7 @@ div.right-panel {
   }
   tr[data-uniqueid]:hover {
    background-color: #ececea;
+   color: #606a73;
   }
   TH {
     background-image: linear-gradient(to bottom, #FFF, #F1F1F1);
