--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -295,6 +295,7 @@ h4.detail-title {
   }
   tr[data-uniqueid]:hover {
     background-color: #ececea;
+    color: #606a73;
   }
   TH {
     background-image: linear-gradient(to bottom, #FFF, #F1F1F1);
@@ -1109,6 +1110,7 @@ div.noOrg-container {
   border-left: 1px solid #ddd;
   border-top: 1px solid #ddd;
   color: #606a73;
+  padding: 0.4em;
 }
 #userSessionReportDetailTable caption {
   padding: 0;
