more assessment report css fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -233,7 +233,7 @@ a.back {
   display: none;
 }
 a.open {
-  top: 14.1em;
+  top: 14.4em;
 }
 a.open:hover {
   color: #2a4531;
@@ -999,6 +999,9 @@ div.noOrg-container span {
   color: #606a73;
   padding: 0.4em;
   margin-top: 0.5em;
+}
+#userSessionReportDetailHeader a[href]:hover {
+  color: #8c9094;
 }
 #userSessionReportDetailTable caption {
   padding: 0;
