--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -280,7 +280,7 @@ a.open, a.back {
   display: none;
 }
 a.open {
-  top: 14.1em;
+  top: 14.4em;
   &:hover {
     color:@linkHover;
   }
@@ -1103,7 +1103,9 @@ div.noOrg-container {
   padding: 0.4em;
   margin-top: 0.5em;
 }
-
+#userSessionReportDetailHeader a[href]:hover {
+  color: #8c9094;
+}
 #userSessionReportDetailTable caption {
   padding: 0;
 }
