--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -248,7 +248,7 @@ a.open, a.back {
   display: none;
 }
 a.open {
-  top: 14.1em;
+  top: 14.4em;
   &:hover {
     color:@linkHover;
   }
@@ -1111,6 +1111,9 @@ div.noOrg-container {
   border-top: 1px solid #ddd;
   color: #606a73;
   padding: 0.4em;
+}
+#userSessionReportDetailHeader a[href]:hover {
+  color: #8c9094;
 }
 #userSessionReportDetailTable caption {
   padding: 0;
