--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -298,8 +298,9 @@ h4.detail-title {
     color: #606a73;
   }
   TH {
-    background-image: linear-gradient(to bottom, #FFF, #F1F1F1);
+    background-image: linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
     letter-spacing: 0.1px;
+    border-bottom: 1px solid #dad8d8;
   }
 }
 #adminTableToolbar {
