change 'forgot password' to 'need help' text

--- a/portal/templates/flask_user/forgot_password.html
+++ b/portal/templates/flask_user/forgot_password.html
@@ -6,7 +6,7 @@
 
 {{ back_btn('user/sign-in','Log In') }}
 
-<h1 class="tnth-headline">{%trans%}Forgot Your Password?{%endtrans%}</h1>
+<h1 class="tnth-headline">{%trans%}Having trouble logging in?{%endtrans%}</h1>
 
 <p>Enter your e-mail address and we'll send an e-mail with a link to reset your password.</p>
 <br />
