--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -19,7 +19,7 @@
             </form>
             {% if user_manager.enable_forgot_password %}
                 <div class="divider">
-                    <a href="{{ url_for('user.forgot_password') }}"><small>{%trans%}Forgot your Password?{%endtrans%}</small></a>
+                    <a href="{{ url_for('user.forgot_password') }}"><small>{%trans%}Having trouble logging in?{%endtrans%}</small></a>
                 </div>
             {% endif %}
             <br/>
