--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -215,7 +215,7 @@
               <input name="password" type="password" placeholder="Password" required>
               <input id="btnLogin" class="button button-large button--teal button--login" type="submit" value="Log In">
               <br/><br/>
-              <a href="{{PORTAL}}/user/forgot-password"><span class="box-modal__sub">Forgot your password?</span></a>
+              <a href="{{PORTAL}}/user/forgot-password"><span class="box-modal__sub">Having trouble logging in?</span></a>
             </form>
             <div class="or">or</div>
             <div class="box-modal-or__divider"></div>
