add LR edit links in UI to allow editing LR content

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -129,6 +129,20 @@ select:not([multiple]) {
   color: #FFF;
   background-color: #000;
 }
+.button--LR, 
+.button--LR.show {
+   opacity: 0;
+   width: 160px;
+   margin: 2em 0;
+}
+.button--LR.show {
+    opacity: 1;
+}
+#profileConsentList .button--LR,
+#profileConsentList .button--LR.show {
+  margin: 0 0.5em;
+  display: inline-block !important;
+}
 #fullSizeBox a[href*="register"] {
   display: none;
 }
