--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -6243,7 +6243,7 @@ figure.nav-overlay {
     color: #fff;
 }
 .page-intro--theme-brown-light {
-    background: #4D4E4C;
+    background: #797b77;
     color: #fff;
 }
 .page-intro__main {
@@ -7264,6 +7264,16 @@ a.home--modal-link {
   height: 2em;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.button--LR,
+.button--LR.show {
+   opacity: 0;
+   width: 180px;
+   text-align: center;
+   margin: 2em 0.5em;
+}
+.button--LR.show {
+    opacity: 1;
 }
 @media (min-width: 1200px) {
     .home--item-container {
