--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -133,6 +133,22 @@ a.btn {
   padding: 0;
   margin: 1em 0.2em;
 }
+.button--LR, 
+.button--LR.show {
+   opacity: 0;
+   width: 160px;
+   margin: 2em 0;
+}
+.button--LR.show {
+    opacity: 1;
+}
+#profileConsentList {
+  .button--LR,
+  .button--LR.show {
+    margin: 0 0.5em;
+    display: inline-block !important;
+  }
+}
 .form-control {
   font-size: @baseFontSize;
   height: 36px;
