--- a/portal/templates/gil/terms-and-conditions.html
+++ b/portal/templates/gil/terms-and-conditions.html
@@ -4,10 +4,15 @@
       {{ super()}}
       <div class="page-intro page-intro--theme-brown-light">
         <div class="page-intro__content">
-          <div class="simple-page-content">
+          <div id="termsConditionsContainer" class="simple-page-content">
             <div>{{ content|safe if content}}</div>
           </div>
         </div>
       </div>
     </main>
 {% endblock %}
+ {% block document_ready %}
+  {% if editorUrl %}
+    <script>appendLREditContainer($("#termsConditionsContainer"), "{{editorUrl}}", {% if user and user.has_role(ROLE.CONTENT_MANAGER) %}true{% else %}false{%endif%});</script>
+  {% endif %}
+ {% endblock %}
