--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -92,6 +92,20 @@ a.btn {
   padding: 0;
   margin: 1em 0.2em;
 }
+.button--LR, 
+.button--LR.show {
+   opacity: 0;
+   width: 160px;
+   margin: 2em 0;
+}
+.button--LR.show {
+    opacity: 1;
+}
+#profileConsentList .button--LR,
+#profileConsentList .button--LR.show {
+  margin: 0 0.5em;
+  display: inline-block !important;
+}
 .form-control {
   font-size: 16px;
   height: 36px;
