--- a/portal/templates/gil/privacy.html
+++ b/portal/templates/gil/privacy.html
@@ -5,9 +5,14 @@
       <div class="page-intro page-intro--theme-brown-light">
         <div class="page-intro__content">
           <div class="simple-page-content">
-            <div>{{ content|safe }}</div>
+            <div id="privacyContentContainer">{{ content|safe }}</div>
           </div>
         </div>
       </div>
     </main>
+ {% endblock %}
+ {% block document_ready %}
+   {% if editorUrl %}
+    <script>appendLREditContainer($("#privacyContentContainer"), "{{editorUrl}}", {% if user and user.has_role(ROLE.CONTENT_MANAGER) %}true{% else %}false{%endif%});</script>
+   {% endif %}
  {% endblock %}
