--- a/portal/templates/privacy.html
+++ b/portal/templates/privacy.html
@@ -2,11 +2,10 @@
 
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
-
-  {{ back_btn(PORTAL, _('Home')) }}
-
+  	{{ back_btn(PORTAL, _('Home')) }}
     <h1 class="tnth-headline">{{ _("TrueNTH") }}</h1>
-
-<p>{{ content|safe }}</p>
-
+	<div id="privacyContentContainer"><p>{{ content|safe }}</p></div>
+	{% if editorUrl %}
+	<script>appendLREditContainer($("#privacyContentContainer"), "{{editorUrl}}", {% if user and user.has_role(ROLE.CONTENT_MANAGER) %}true{% else %}false{%endif%});</script>
+	{% endif %}
 {% endblock %}
