--- a/portal/templates/terms-and-conditions.html
+++ b/portal/templates/terms-and-conditions.html
@@ -6,7 +6,9 @@
   {{ back_btn(PORTAL, _('Home')) }}
 
     <h1 class="tnth-headline">{{ _("TrueNTH") }}</h1>
-
-	<p>{{ content|safe }}</p>
+	<div id = "termsConditionsContainer"><p>{{ content|safe }}</p></div>
+	{% if editorUrl %}
+		<script>appendLREditContainer($("#termsConditionsContainer"), "{{editorUrl}}", {% if user and user.has_role(ROLE.CONTENT_MANAGER) %}true{% else %}false{%endif%});</script>
+	{% endif %}
 
 {% endblock %}
